# rs-anylm

./: Cargo.toml  README.md
examples/: anthropic-completions.rs  anthropic-schema.rs  anthropic-tools.rs  anthropic.rs  cerebras-completions.rs  cerebras-schema.rs  cerebras-tools.rs  cerebras.rs  completions.rs  embeddings.rs  imageview.rs  lmstudio-completions2.rs  lmstudio-embeddings.rs  lmstudio-imageview.rs  lmstudio-schema.rs  lmstudio-tools.rs  lmstudio-tools2.rs  lmstudio-tools3.rs  lmstudio.rs  openrouter-completions.rs  openrouter-schema.rs  openrouter-tools.rs  openrouter.rs  schema.rs  tools.rs
src/: chunk.rs  error.rs  lib.rs  options.rs  prelude.rs
src/api/: completions.rs  content.rs  embeddings.rs  kind.rs  message.rs  mod.rs  role.rs  schema.rs  tool.rs
src/image/: mod.rs
src/utils/: mod.rs
