[package]
name = "anylm"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.1"
futures = "0.3.31"
macron = { version = "0.1.13", features = ["derive", "string"] }
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tiktoken-rs = "0.9.1"
tokio = { version = "1.49.0", features = ["full"] }
