[package]
name = "anylm"
version = "0.1.1"
description = "The universal API for all AI services that you know"
keywords = ["lm", "api", "ai", "llm", "slm"]
categories = ["development-tools", "rust-patterns"]
license = "MIT"
authors = ["Bulat Sh. <t.me/fuderis>"]
repository = "https://github.com/fuderis/rs-anylm"
readme = "README.md"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bytes = "1.11.1"
futures = "0.3.31"
macron = { version = "0.1.13", features = ["derive", "string"] }
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json", "stream", "socks"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tiktoken-rs = "0.9.1"
tokio = { version = "1.49.0", features = ["full"] }
